--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "/",
+  "homepage": "https://clark-9-9.github.io/portfolio_react_ts",
   "name": "react_ts_portfolio",
   "version": "0.1.0",
   "private": true,
